--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -44,7 +44,8 @@
             android:src="@drawable/ic_scan_collection"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:padding="@dimen/activity_margin_10dp"/>
+            android:padding="@dimen/activity_margin_10dp"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
@@ -71,7 +72,8 @@
         <RelativeLayout
             android:id="@+id/rlBtnSaleAndStolen"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:visibility="gone">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvSale"
@@ -88,7 +90,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/drawable_btn_green_gradient_selector"
                     android:text="@string/label_button_sell"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorOffWhite"
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size_large"
@@ -114,7 +116,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/drawable_btn_red_gradient_selector"
                     android:text="@string/label_button_stolen"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorOffWhite"
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="@dimen/text_size_large"
@@ -142,7 +144,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/drawable_btn_green_gradient_selector"
                 android:text="@string/label_button_found"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/colorOffWhite"
                 android:gravity="center"
                 android:textStyle="bold"
                 android:textSize="@dimen/text_size_xlarge"
@@ -155,6 +157,75 @@
         </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/llViewNoData"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rlTitle"
+        android:gravity="center_horizontal"
+        android:background="@android:color/white"
+        android:paddingHorizontal="@dimen/activity_margin_16dp"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/activity_margin_24dp"
+            android:layout_weight="1"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_collection_no_data"
+            android:layout_marginBottom="@dimen/activity_margin_24dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Haven’t had your own Grails"
+            android:textColor="@color/warmGrey"
+            android:textSize="@dimen/text_size_xlarge"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You can see your Grails after scanning their QR code over here."
+            android:textColor="@color/warmGrey"
+            android:textSize="@dimen/text_size_large"
+            android:layout_marginTop="@dimen/activity_margin_4dp"
+            android:gravity="center_horizontal"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:layout_weight="1"/>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="10dp"
+            app:cardCornerRadius="6dp"
+            android:layout_marginBottom="@dimen/activity_margin_40dp">
+
+            <TextView
+                android:id="@+id/btnScanNoData"
+                android:layout_width="145dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/drawable_btn_green_gradient_selector"
+                android:text="@string/label_button_scan_now"
+                android:textColor="@color/colorOffWhite"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_size_xlarge"
+                android:paddingHorizontal="@dimen/activity_margin_18dp"
+                android:paddingVertical="@dimen/activity_margin_14dp"
+                android:drawableLeft="@drawable/ic_scan"
+                android:drawableTint="@android:color/white" />
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
     <include
         android:id="@+id/pb_loading"
