--- a/app/src/main/res/layout/flash_card_layout_back.xml
+++ b/app/src/main/res/layout/flash_card_layout_back.xml
@@ -1,131 +1,275 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/transparent"
-    android:paddingVertical="@dimen/activity_margin_24dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent">
 
-    <ImageView
-        android:id="@+id/ivBackground"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bg_flip_card_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:scaleType="fitXY"/>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/ivBackground"
-        app:layout_constraintEnd_toEndOf="@+id/ivBackground"
-        android:layout_marginRight="@dimen/activity_margin_34dp">
+        android:background="@android:color/transparent"
+        android:paddingVertical="@dimen/activity_margin_24dp">
 
         <ImageView
+            android:id="@+id/ivBackground"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_flag_card" />
+            android:src="@drawable/bg_flip_card_back"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="fitXY"/>
 
-        <TextView
-            android:id="@+id/tvItemIndexBack"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/activity_margin_5dp"
-            android:text="1"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold" />
+            app:layout_constraintTop_toTopOf="@+id/ivBackground"
+            app:layout_constraintEnd_toEndOf="@+id/ivBackground"
+            android:layout_marginRight="@dimen/activity_margin_34dp">
 
-    </RelativeLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_flag_card" />
 
-    <ImageView
-        android:id="@+id/ivBrandLogoBack"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
-        app:layout_constraintTop_toTopOf="@+id/ivBackground"
-        app:layout_constraintStart_toStartOf="@+id/ivBackground"
-        android:layout_marginLeft="@dimen/activity_margin_34dp"
-        android:layout_marginTop="@dimen/activity_margin_34dp"
-        android:src="@drawable/logo_adidas" />
+            <TextView
+                android:id="@+id/tvItemIndexBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/activity_margin_5dp"
+                android:text="1"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/text_size_large"
+                android:textStyle="bold" />
 
-    <RelativeLayout
-        android:id="@+id/rlItemNameBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/ivBrandLogoBack"
-        app:layout_constraintStart_toStartOf="@+id/ivBackground"
-        android:layout_marginLeft="@dimen/activity_margin_34dp"
-        android:layout_marginTop="@dimen/activity_margin_4dp">
-
-        <TextView
-            android:id="@+id/tvItemNameBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="NMD R1 Trainer"
-            android:textStyle="bold"
-            android:textSize="@dimen/text_size_xlarge"
-            android:textColor="@android:color/black"
-            android:layout_centerVertical="true"/>
+        </RelativeLayout>
 
         <ImageView
-            android:id="@+id/ivLimitedBack"
+            android:id="@+id/ivBrandLogoBack"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            app:layout_constraintTop_toTopOf="@+id/ivBackground"
+            app:layout_constraintStart_toStartOf="@+id/ivBackground"
+            android:layout_marginLeft="@dimen/activity_margin_34dp"
+            android:layout_marginTop="@dimen/activity_margin_34dp"
+            android:src="@drawable/logo_adidas" />
+
+        <RelativeLayout
+            android:id="@+id/rlItemNameBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_limited_small"
-            android:layout_toEndOf="@+id/tvItemNameBack"
-            android:layout_marginLeft="@dimen/activity_margin_4dp"
-            android:visibility="gone"/>
+            app:layout_constraintTop_toBottomOf="@+id/ivBrandLogoBack"
+            app:layout_constraintStart_toStartOf="@+id/ivBackground"
+            android:layout_marginLeft="@dimen/activity_margin_34dp"
+            android:layout_marginTop="@dimen/activity_margin_4dp">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tvItemNameBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="NMD R1 Trainer"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_size_xlarge"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"/>
 
-    <LinearLayout
-        android:id="@+id/llColorSize"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/rlItemNameBack"
-        app:layout_constraintStart_toStartOf="@id/ivBackground"
-        app:layout_constraintEnd_toEndOf="@id/ivBackground"
-        android:layout_marginTop="@dimen/activity_margin_12dp"
-        android:layout_marginHorizontal="@dimen/activity_margin_34dp">
+            <ImageView
+                android:id="@+id/ivLimitedBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_limited_small"
+                android:layout_toEndOf="@+id/tvItemNameBack"
+                android:layout_marginLeft="@dimen/activity_margin_4dp"
+                android:visibility="gone"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/llColorSize"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/rlItemNameBack"
+            app:layout_constraintStart_toStartOf="@id/ivBackground"
+            app:layout_constraintEnd_toEndOf="@id/ivBackground"
+            android:layout_marginTop="@dimen/activity_margin_12dp"
+            android:layout_marginHorizontal="@dimen/activity_margin_34dp">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/tvItemSize"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="7"
+                android:textSize="@dimen/text_size_xlarge"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:drawableLeft="@drawable/ic_size"
+                android:drawablePadding="@dimen/activity_margin_8dp" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/tvItemSize"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+            app:layout_constraintTop_toBottomOf="@+id/llColorSize"
+            app:layout_constraintStart_toStartOf="@id/ivBackground"
+            app:layout_constraintEnd_toEndOf="@id/ivBackground"
+            android:layout_marginTop="@dimen/activity_margin_16dp"
+            android:layout_marginBottom="@dimen/activity_margin_34dp"
+            android:layout_marginHorizontal="@dimen/activity_margin_34dp"
+            android:ellipsize="end"
+            android:textColor="@color/colorPutty"
+            android:textSize="@dimen/text_size_large"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clViewItemStolenBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:paddingVertical="@dimen/activity_margin_24dp"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/ivBackgroundDisabled"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="7"
-            android:textSize="@dimen/text_size_xlarge"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:drawableLeft="@drawable/ic_size"
-            android:drawablePadding="@dimen/activity_margin_8dp" />
+            android:src="@drawable/bg_flip_card_back"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="fitXY"/>
 
-    </LinearLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@+id/ivBackgroundDisabled"
+            app:layout_constraintEnd_toEndOf="@+id/ivBackgroundDisabled"
+            android:layout_marginRight="@dimen/activity_margin_34dp">
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
-        app:layout_constraintTop_toBottomOf="@+id/llColorSize"
-        app:layout_constraintStart_toStartOf="@id/ivBackground"
-        app:layout_constraintEnd_toEndOf="@id/ivBackground"
-        android:layout_marginTop="@dimen/activity_margin_16dp"
-        android:layout_marginBottom="@dimen/activity_margin_34dp"
-        android:layout_marginHorizontal="@dimen/activity_margin_34dp"
-        android:ellipsize="end"
-        android:textColor="@color/colorPutty"
-        android:textSize="@dimen/text_size_large"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_flag_card"
+                android:tint="@color/colorPutty"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvItemIndexBackDisabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/activity_margin_5dp"
+                android:text="1"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/text_size_large"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/ivBrandLogoBackDisabled"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            app:layout_constraintTop_toTopOf="@+id/ivBackgroundDisabled"
+            app:layout_constraintStart_toStartOf="@+id/ivBackgroundDisabled"
+            android:layout_marginLeft="@dimen/activity_margin_34dp"
+            android:layout_marginTop="@dimen/activity_margin_34dp"
+            android:src="@drawable/logo_adidas"
+            android:tint="@color/colorPutty"/>
+
+        <RelativeLayout
+            android:id="@+id/rlItemNameBackDisabled"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/ivBrandLogoBackDisabled"
+            app:layout_constraintStart_toStartOf="@+id/ivBackgroundDisabled"
+            android:layout_marginLeft="@dimen/activity_margin_34dp"
+            android:layout_marginTop="@dimen/activity_margin_4dp">
+
+            <TextView
+                android:id="@+id/tvItemNameBackDisabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="NMD R1 Trainer"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_size_xlarge"
+                android:textColor="@color/colorPutty"
+                android:layout_centerVertical="true" />
+
+            <ImageView
+                android:id="@+id/ivLimitedBackDisabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_limited_small"
+                android:layout_toEndOf="@+id/tvItemNameBackDisabled"
+                android:layout_marginLeft="@dimen/activity_margin_4dp"
+                android:tint="@color/colorPutty"
+                android:visibility="gone"/>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/llColorSizeDisabled"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/rlItemNameBackDisabled"
+            app:layout_constraintStart_toStartOf="@id/ivBackgroundDisabled"
+            app:layout_constraintEnd_toEndOf="@id/ivBackgroundDisabled"
+            android:layout_marginTop="@dimen/activity_margin_12dp"
+            android:layout_marginHorizontal="@dimen/activity_margin_34dp">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/tvItemSizeDisabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="7"
+                android:textSize="@dimen/text_size_xlarge"
+                android:textColor="@color/colorPutty"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:drawableLeft="@drawable/ic_size"
+                android:drawablePadding="@dimen/activity_margin_8dp"
+                android:drawableTint="@color/colorPutty"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+            app:layout_constraintTop_toBottomOf="@+id/llColorSizeDisabled"
+            app:layout_constraintStart_toStartOf="@id/ivBackgroundDisabled"
+            app:layout_constraintEnd_toEndOf="@id/ivBackgroundDisabled"
+            android:layout_marginTop="@dimen/activity_margin_16dp"
+            android:layout_marginBottom="@dimen/activity_margin_34dp"
+            android:layout_marginHorizontal="@dimen/activity_margin_34dp"
+            android:ellipsize="end"
+            android:textColor="@color/colorPutty"
+            android:textSize="@dimen/text_size_large"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
