--- a/app/src/main/res/layout/flash_card_layout_front.xml
+++ b/app/src/main/res/layout/flash_card_layout_front.xml
@@ -1,86 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    android:paddingVertical="@dimen/activity_margin_24dp">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bg_flip_card_front"
-        android:scaleType="fitXY"
-        android:layout_centerInParent="true"/>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="@dimen/activity_margin_34dp">
+        android:background="@android:color/transparent"
+        android:paddingVertical="@dimen/activity_margin_24dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_flag_card"
+            android:src="@drawable/bg_flip_card_front"
+            android:scaleType="fitXY"
             android:layout_centerInParent="true"/>
 
-        <TextView
-            android:id="@+id/tvItemIndexFront"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1"
-            android:textStyle="bold"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/text_size_large"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="@dimen/activity_margin_34dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_flag_card"
+                android:layout_centerInParent="true"/>
+
+            <TextView
+                android:id="@+id/tvItemIndexFront"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/text_size_large"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="@dimen/activity_margin_5dp"/>
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/ivBrandLogoFront"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:src="@drawable/logo_adidas"
             android:layout_centerHorizontal="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="@dimen/activity_margin_5dp"/>
+            android:layout_marginTop="@dimen/activity_margin_34dp"/>
+
+        <TextView
+            android:id="@+id/tvItemBrand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Adidas"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@android:color/black"
+
+            android:layout_below="@+id/ivBrandLogoFront"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/activity_margin_8dp"/>
+
+        <TextView
+            android:id="@+id/tvItemNameFront"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NMD R1 Trainer"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_xxxlarge"
+            android:textColor="@android:color/black"
+            android:layout_below="@+id/tvItemBrand"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/ivLimitedFront"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_limited_large"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/tvItemNameFront"
+            android:layout_marginTop="@dimen/activity_margin_8dp"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/ivBrandLogoFront"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:src="@drawable/logo_adidas"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/activity_margin_34dp"/>
-
-    <TextView
-        android:id="@+id/tvItemBrand"
+    <RelativeLayout
+        android:id="@+id/rlViewItemStolenFront"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Adidas"
-        android:textStyle="bold"
-        android:textSize="@dimen/text_size_large"
-        android:textColor="@android:color/black"
+        android:background="@android:color/transparent"
+        android:paddingVertical="@dimen/activity_margin_24dp"
+        android:visibility="gone">
 
-        android:layout_below="@+id/ivBrandLogoFront"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/activity_margin_8dp"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/bg_flip_card_front_disabled"
+            android:scaleType="fitXY"
+            android:layout_centerInParent="true"/>
 
-    <TextView
-        android:id="@+id/tvItemNameFront"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="NMD R1 Trainer"
-        android:textStyle="bold"
-        android:textSize="@dimen/text_size_xxxlarge"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/tvItemBrand"
-        android:layout_centerHorizontal="true"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="@dimen/activity_margin_34dp">
 
-    <ImageView
-        android:id="@+id/ivLimitedFront"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_limited_large"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/tvItemNameFront"
-        android:layout_marginTop="@dimen/activity_margin_8dp"
-        android:visibility="gone"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_flag_card_disabled"
+                android:layout_centerInParent="true"/>
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/tvItemIndexFrontDisabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/text_size_large"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="@dimen/activity_margin_5dp"/>
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/ivBrandLogoFrontDisabled"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:src="@drawable/logo_adidas"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="@dimen/activity_margin_34dp"
+            android:tint="@color/colorPutty"/>
+
+        <TextView
+            android:id="@+id/tvItemBrandDisabled"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Adidas"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@color/colorPutty"
+            android:layout_below="@+id/ivBrandLogoFrontDisabled"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/activity_margin_8dp"/>
+
+        <TextView
+            android:id="@+id/tvItemNameFrontDisabled"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="NMD R1 Trainer"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_xxxlarge"
+            android:textColor="@color/colorPutty"
+            android:layout_below="@+id/tvItemBrandDisabled"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
+            android:id="@+id/ivLimitedFrontDisabled"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_limited_large"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/tvItemNameFrontDisabled"
+            android:layout_marginVertical="@dimen/activity_margin_8dp"
+            android:tint="@color/colorPutty"
+            android:visibility="gone"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_item_was_stolen"
+            android:layout_below="@+id/ivLimitedFrontDisabled"
+            android:layout_centerHorizontal="true"
+            android:textSize="@dimen/text_size_xlarge"
+            android:textStyle="bold"
+            android:textColor="@color/colorPutty"/>
+
+    </RelativeLayout>
+
+</FrameLayout>
