--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,5 +36,6 @@
     <color name="scarlet">#d0021b</color>
     <color name="brick">#c92525</color>
     <color name="darkRed">#8d0101</color>
+    <color name="warmGrey">#9b9b9b</color>
 
 </resources>
